--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -675,12 +675,23 @@ section {
   border-radius: 6px;
   background: #fff;
   transition: ease-in-out 0.3s;
+  height: 350px;
 }
 
 .services .icon-box i {
   float: left;
   color: #3498db;
   font-size: 40px;
+  line-height: 0;
+}
+
+.services .icon-box img {
+  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  float: left;
+  width: 400px;
+  height: 300px;
   line-height: 0;
 }
 
