--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,8 +685,8 @@ section {
   border-radius: 10px;
   object-fit: cover;
   transition: ease-in-out 0.3s;
-  width: 300px; /* Adjust as needed */
-  height: 200px; /* Adjust as needed */
+  width:60%;
+  height: auto; /* Adjust as needed */
   margin-right: 20px;
 }
 
