--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,6 +692,7 @@ section {
 
 .services .icon-box .content {
   display: flex;
+  width:40%;
   flex-direction: column;
   justify-content: center;
 }
