--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,7 @@ h6 {
 #hero {
   width: 100%;
   height: 60vh;
-  background: url("../img/bg.jpg") center center;
+  background: url("../img/b.jpeg") center center;
   background-size: cover;
   position: relative;
   margin-top: 70px;
@@ -357,7 +357,6 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(90, 120, 143, 0.7);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -374,7 +373,7 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #e8ecee;
 }
 
 #hero h1 span {
