--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,43 @@ h6 {
   padding: 0;
 }
 
+#boat {
+  width: 100%;
+  height: 60vh;
+  background: url("../img/b.jpeg") center center;
+  background-size: cover;
+  position: relative;
+  margin-top: 70px;
+  padding: 0;
+}
+
+#boat:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#boat .container {
+  z-index: 2;
+}
+
+#boat h1 {
+  margin: 0 0 10px 0;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 0px;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  color: #e8ecee;
+}
+
+#boat h1 span {
+  border-bottom: 4px solid #3498db;
+}
+
 #hero:before {
   content: "";
   position: absolute;
@@ -746,6 +783,7 @@ section {
 --------------------------------------------------------------*/
 .portfolio {
   padding: 60px 0;
+  height:auto;
 }
 
 .portfolio #portfolio-flters {
@@ -791,14 +829,22 @@ section {
 
 .portfolio .portfolio-item {
   position: relative;
-  height: 360px;
+  height: 450px;
   overflow: hidden;
 }
+.portfolio .portfolio-wrap {
+  margin-left: 40px; /* Adjust margin as needed */
+}
+
+.specifications {
+  margin-right: -80px; /* Adjust negative margin as needed */
+}
+
 
 .portfolio .portfolio-item figure {
   background: #000;
   overflow: hidden;
-  height: 240px;
+  height: 400px;
   position: relative;
   border-radius: 4px 4px 0 0;
   margin: 0;
@@ -867,7 +913,7 @@ section {
   background: #fff;
   text-align: center;
   padding: 30px;
-  height: 90px;
+  height: 200px;
   border-radius: 0 0 3px 3px;
 }
 
@@ -893,7 +939,6 @@ section {
   color: #b8b8b8;
   font-weight: 500;
   font-size: 14px;
-  text-transform: uppercase;
 }
 
 /*--------------------------------------------------------------
@@ -1093,6 +1138,70 @@ section {
   font-size: 18px;
   margin: 0 2px;
 }
+
+/*--------------------------------------------------------------
+# specifications
+--------------------------------------------------------------*/
+
+.specifications .info-wrap {
+  padding: 30px;
+  border-radius: 4px;
+}
+
+.specifications .info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.specifications .btn {
+  font-family: "Poppins", sans-serif;
+  width: 150px;
+  font-weight: 400;
+  font-size: 13px;
+  letter-spacing: 2px;
+  display: inline-block;
+  padding: 12px 28px;
+  border-radius: 4px;
+  transition: ease-in-out 0.3s;
+  justify-content: center;
+  color: #fff;
+  background: #3498db;
+  text-transform: uppercase;
+}
+
+.specifications .info i {
+  font-size: 20px;
+  color: #3498db;
+  width: 44px;
+  height: 44px;
+  background: #eaf4fb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  margin-right: 20px;
+}
+
+.specifications .info h4 {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: #384046;
+}
+
+.specifications .info p {
+  margin: 0;
+  font-size: 14px;
+  color: #65747f;
+}
+
+.specifications .info:hover i {
+  background: #3498db;
+  color: #fff;
+}
+
 
 /*--------------------------------------------------------------
 # Contact
