--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  overflow-x: hidden;
 }
 
 a {
@@ -44,6 +45,7 @@ h6 {
 
 .back-to-top i {
   font-size: 28px;
+  text-align: center;
   color: #fff;
   line-height: 0;
 }
