--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,6 @@ h6 {
 #boat {
   width: 100%;
   height: 60vh;
-  background: url("../img/b.jpeg") center center;
   background-size: cover;
   position: relative;
   margin-top: 70px;
@@ -783,6 +782,46 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+
+.specifications .spec-list li i {
+  font-size: 16px; /* Smaller icon size */
+  color: #3498db;
+  margin-right: 10px;
+}
+
+.specifications .spec-list li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.highlight {
+  color: #3498db;
+  font-weight: bold;
+}
+
+.specifications .info i {
+  font-size: 16px; /* Smaller icon size */
+  color: #3498db;
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  background: #eaf4fb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+}
+
+.specifications .info h4 {
+  font-size: 18px;
+}
+
+.specifications .info p {
+  font-size: 14px;
+}
+
 .portfolio {
   padding: 60px 0;
   height:auto;
